--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,18 @@
             content="Site to find cocktails using what you got"
         />
         <title>React App</title>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Glegoo:wght@700&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Prompt:wght@200&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <div id="root"></div>
