fixed api call not passing through parameters appropriately, need to fix useEffect bug

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
             name="Cocktail Crawler"
             content="Site to find cocktails using what you got"
         />
-        <title>React App</title>
+        <title>Cocktail Crawler</title>
         <link
             href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
             rel="stylesheet"
