redid CSS and tidied up drink cards

--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,20 @@
             content="Site to find cocktails using what you got"
         />
         <title>Cocktail Crawler</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Oranienbaum&display=swap"
             rel="stylesheet"
         />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link
-            href="https://fonts.googleapis.com/css2?family=Glegoo:wght@700&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap"
             rel="stylesheet"
         />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link
-            href="https://fonts.googleapis.com/css2?family=Prompt:wght@200&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Cantarell&display=swap"
             rel="stylesheet"
         />
     </head>
